Fix RadzenListBox and DropDown multiple selection item content not stretching to full width

--- a/Radzen.Blazor/themes/components/blazor/_dropdown.scss
+++ b/Radzen.Blazor/themes/components/blazor/_dropdown.scss
@@ -292,6 +292,10 @@ $multiselect-checkbox-margin: 0 0.5rem 0 0 !default;
     align-items: center;
 }
 
+.rz-multiselect-item-content {
+  flex: 1;
+}
+
 .rz-multiselect-label-container,
 .rz-dropdown-label {
   display: block;
